--- a/package.json
+++ b/package.json
@@ -8,8 +8,10 @@
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.27.2",
+    "cookie-parser": "^1.4.6",
     "express": "^4.18.1",
     "install": "^0.13.0",
+    "morgan": "^1.10.0",
     "nodemon": "^2.0.19",
     "npm": "^8.16.0",
     "pg": "^8.7.3",
@@ -25,10 +27,9 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "start": "concurrently 'npm run server' 'npm run client'",
+    "server": "nodemon api/server",
+    "client": "react-scripts start"
   },
   "eslintConfig": {
     "extends": [
