--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-redux": "^8.0.2",
     "react-router": "^6.3.0",
     "react-router-dom": "^6.3.0",
+    "redux-logger": "^3.0.6",
     "react-scripts": "^5.0.1",
     "redux": "^4.2.0",
     "sequelize": "^6.21.3",
