--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "express": "^4.18.1",
+    "firebase": "^9.9.2",
     "install": "^0.13.0",
     "jsonwebtoken": "^8.5.1",
     "morgan": "^1.10.0",
@@ -26,9 +27,9 @@
     "react-redux": "^8.0.2",
     "react-router": "^6.3.0",
     "react-router-dom": "^6.3.0",
-    "redux-logger": "^3.0.6",
     "react-scripts": "^5.0.1",
     "redux": "^4.2.0",
+    "redux-logger": "^3.0.6",
     "sequelize": "^6.21.3",
     "sqlite3": "^5.0.11",
     "web-vitals": "^2.1.4"
